# python

./: .gitignore  Brewfile  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: home-mcp.yml  solar-cli.yml  tech-mcp.yml
projects/hello_world/: __main__.py
projects/home-mcp/: Dockerfile  README.md  compose.yaml  pyproject.toml
projects/home-mcp/src/home_mcp/: __main__.py  server.py
projects/solar-cli/: Dockerfile  README.md  compose.yaml  pyproject.toml
projects/solar-cli/src/solar_cli/: __main__.py  agent.py  influxdb.py  prompts.py  tools.py
projects/tech-mcp/: .env.example  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml
projects/tech-mcp/data/: relationships.json
projects/tech-mcp/scripts/: ingest_repo.py
projects/tech-mcp/src/tech_mcp/: __main__.py  config.py  embeddings.py  ingestion.py  relationships.py  retrieval.py  server.py
projects/tech-mcp/tests/: conftest.py  test_retrieval.py
projects/tech-mcp/tests/fixtures/: debug_session.json
projects/tech-mcp/tests/fixtures/auth-api/: README.md
projects/tech-mcp/tests/fixtures/auth-web/: README.md
projects/tech-mcp/tests/fixtures/python-mcp/: server.py
projects/web_scraper/: .gitignore  __main__.py  driver.py
projects/web_scraper/sites/: example.json
projects/web_scraper/tools/: config.py  logger.py
