[project]
name = "home-mcp"
version = "0.1.0"
description = "MCP server exposing solar production data from InfluxDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "influxdb-client>=1.48",
    "mcp[cli]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
home-mcp = "home_mcp.__main__:main"
