[project]
name = "solar-cli"
version = "0.1.0"
description = "CLI agent that queries solar production data in InfluxDB using natural language"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49",
    "influxdb-client>=1.48",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
solar-cli = "solar_cli.__main__:main"
